# foschiera.dev

./: .gitignore  404.html  CNAME  LICENSE.md  README.md  custom.css  index.html  marmite.yaml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yaml  main.yaml
about/: index.html
blog/: index.html
blog/elixir/: index.html
blog/elixir/post1/: index.html
blog/elixir/post2/: index.html
blog/posts/post1/: index.html
blog/posts/post2/: index.html
blog/posts/post3/: index.html
blog/posts/post4/: index.html
blog/posts/post5/: index.html
blog/posts/post6/: index.html
blog/python/: index.html
blog/python/post1/: index.html
content/: _comments.md  _footer.md  _hero.md  _htmlhead.md  about.md
docs/: about.md  index.md
docs/blog/: index.md
docs/blog/posts/: post1.md  post2.md  post3.md  post4.md  post5.md  post6.md
docs/blog/python/: index.md
search/: search_index.json
site/: 404.html  archive-2025-1.html  archive-2025.html  archive-2025.rss  archive.html  author-foschiera-1.html  author-foschiera.html  author-foschiera.rss  authors.html  index-1.html  index.html  index.rss  marmite.json  pages-1.html  pages.html  series.html  sobre.html  streams.html  tags.html  welcome.html
site/static/: search_index.json
