[tool.poetry]
name = "foschiera-dev"
version = "0.1.0"
description = ""
authors = ["Anderson Foschiera <foschieraanderson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "foschiera"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
pymdown-extensions = "^10.0.1"
mkdocs-material = "^9.1.13"
mkdocs-blogging-plugin = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
